tests/fixtures/invalid/none_bitor_str.py
# Cannot bitwise OR None and Str
x: None = None | "hello"
